[tool.poetry]
name = "spotify_list_maker"
version = "0.1.0"
description = ""
authors = ["Jarkko Lagus <jarkko@iprally.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
